--- a/Chat/styles.css
+++ b/Chat/styles.css
@@ -4,42 +4,175 @@ body {
 .chat {
 	position: absolute;
 	left: 5%;
-	top: 5%;
+	top: 15%;
 	width: 90%;
-	height: 90%;
+	height: 80%;
 }
 .friendInfo {
 	position: absolute;
-	left: 1%;
+	left: 5%;
 	top: 1%;
-	height: 15%;
-	width: 15%;
+	height: 20%;
+	width: 25%;
+	border: solid 2px grey;
+	overflow: hidden;
+}
+.friendInfo img {
+	position: absolute;
+	left: 68%;
+	top: 3%;
+	width: 30%;
+	overflow: hidden;
+}
+.friendInfo span {
+	position: absolute;
+	left: 20%;
+	width: 40%;
+	top: 10%;
+	height: 100%;
+	text-align: center;
+	color: #850DC9;
+	font-size: small;
+	font-family: sans-serif;
+	font-style: italic;
 }
 .panel {
 	position: absolute;
-	left: 1%;
-	top: 30%;
-	height: 41%;
-	width: 27%;
+	border: solid 2px grey;
+	left: 5%;
+	top: 23%;
+	height: 78%;
+	width: 25%;
+	text-align: center;
+	color: #331084;
+	font-size: large;
+	font-family: fantasy;
+	font-weight: bold;
+	float: left;
 }
-.messageArea {
-	position: relative;
-	left: 33%;
-	top: 3%;
-	height: 74%;
-	width: 61%;
-}
-.userArea {
+.panel select {
+	color: #531476;
+	width: 250px;
+	border-radius: 10%;
+	background-color: #E0E3FA;
+	font-size: small;
+	font-family: fantasy;
+	font-style: italic;
+	-webkit-appearance: none;
+	-moz-appearance: none;
 	position: absolute;
-	left: 1%;
-	top: 75%;
-	height: 20%;
+	left: 3%;
+	top: 10%;
 	width: 96%;
+	height: 30%;
+	overflow: hidden;
+	float: left;
 }
-.friendPhoto {
+.panel form {
+	position: absolute;
+	float: left;
+	left: 0%;
+	top: 43%;
+	width: 100%;
+	height: 18%;
+	overflow: hidden;
+}
+.panel img {
 	position: absolute;
 	left: 50%;
-	top: 1%;
-	height: 90%;
-	width: 50%;
+	top: 60%;
+	height: 38%;
 }
+.button {
+	background-color: #c745ad;
+	-moz-border-radius: 30%;
+	-webkit-border-radius: 30%;
+	border-radius: 30%;
+	cursor: pointer;
+	color: #ffffff;
+	font-family: arial;
+	font-size: normal;
+	font-weight: bold;
+	height: 40px;
+	width: 70px;
+}
+.button:hover {
+	background-color: #762abd;
+}
+.userArea {
+border: solid 2px grey;
+	position: absolute;
+	left: 31%;
+	top: 80%;
+	height: 21%;
+	width: 68%;
+	overflow: hidden;
+}
+.userArea textarea {
+border: solid 2px grey;
+	position: absolute;
+	left: 0%;
+	top: 0%;
+	height: 100%;
+	width: 80%;
+}
+.userArea button {
+	position: absolute;
+	left: 85%;
+	top: 25%;
+}
+.messageArea {
+	position: absolute;
+	border: solid 2px grey;
+	left: 31%;
+	top: 1%;
+	height: 77%;
+	background-color: #E0E3FA;
+	width: 68%;
+	overflow-y: scroll;
+	overflow-x: hidden;
+}
+.friendMessage {
+	position: relative;
+	left: 3%;
+	top: 1%;
+	width: 80%;
+	color: green;
+}
+.userMessage {
+	position: relative;
+	left: 3%;
+	width: 100%;
+	color: green;
+}
+.userMessage div {
+	position: relative;
+	left: 0%;
+	width: 80%;
+}
+.iconD {
+	position: absolute;
+	left: 90%;
+	top: 0%;
+	height: 18px;
+	width: 18px;
+	cursor: pointer;
+}
+.iconE {
+	position: absolute;
+	left: 86%;
+	top: 0%;
+	height: 18px;
+	width: 18px;
+	cursor: pointer;
+}
+.userName {
+	font-weight: bold;
+	color: yellow;
+}
+.friendName {
+	font-weight: bold;
+	color: blue;
+	font-style: italic;
+}
+
