--- a/Chat/styles.css
+++ b/Chat/styles.css
@@ -1,5 +1,10 @@
 body {
-	background: #FFF0F5;
+	background: RGB(186,218,191);
+}
+.chatty {
+	top: 3%;
+	left: 5%;
+	width: 20%;
 }
 .chat {
 	position: absolute;
@@ -14,44 +19,45 @@ body {
 	top: 1%;
 	height: 20%;
 	width: 25%;
-	border: solid 2px grey;
+	border: solid 2px RGB(115,129,106);
 	overflow: hidden;
 }
 .friendInfo img {
 	position: absolute;
-	left: 68%;
-	top: 3%;
-	width: 30%;
+	left: 63%;
+	top: 4%;
+	width: 35%;
+	height: 90%;
 	overflow: hidden;
 }
 .friendInfo span {
 	position: absolute;
-	left: 20%;
+	left: 13%;
 	width: 40%;
 	top: 10%;
 	height: 100%;
 	text-align: center;
-	color: #850DC9;
+	color: RGB(55,135,82);
 	font-size: small;
 	font-family: sans-serif;
 	font-style: italic;
 }
 .panel {
 	position: absolute;
-	border: solid 2px grey;
+	border: solid 2px RGB(115,129,106);
 	left: 5%;
 	top: 23%;
 	height: 78%;
 	width: 25%;
 	text-align: center;
-	color: #331084;
+	color: RGB(55,135,82);
 	font-size: large;
 	font-family: fantasy;
 	font-weight: bold;
 	float: left;
 }
 .panel select {
-	color: #531476;
+	color: RGB(79,138,97);
 	width: 250px;
 	border-radius: 10%;
 	background-color: #E0E3FA;
@@ -79,12 +85,13 @@ body {
 }
 .panel img {
 	position: absolute;
-	left: 50%;
-	top: 60%;
-	height: 38%;
+	left: 53%;
+	top: 69%;
+	height: 30%;
+	width: 45%;
 }
 .button {
-	background-color: #c745ad;
+	background-color: RGB(123,179,141);
 	-moz-border-radius: 30%;
 	-webkit-border-radius: 30%;
 	border-radius: 30%;
@@ -97,10 +104,10 @@ body {
 	width: 70px;
 }
 .button:hover {
-	background-color: #762abd;
+	background-color: RGB(55,135,82);
 }
 .userArea {
-border: solid 2px grey;
+	border: solid 2px RGB(115,129,106);
 	position: absolute;
 	left: 31%;
 	top: 80%;
@@ -109,7 +116,8 @@ border: solid 2px grey;
 	overflow: hidden;
 }
 .userArea textarea {
-border: solid 2px grey;
+	border: solid 2px RGB(115,129,106);
+	background-color: RGB(123,179,141);
 	position: absolute;
 	left: 0%;
 	top: 0%;
@@ -123,11 +131,11 @@ border: solid 2px grey;
 }
 .messageArea {
 	position: absolute;
-	border: solid 2px grey;
+	border: solid 2px RGB(115,129,106);
 	left: 31%;
 	top: 1%;
 	height: 77%;
-	background-color: #E0E3FA;
+	background-color: RGB(227, 241, 226);
 	width: 68%;
 	overflow-y: scroll;
 	overflow-x: hidden;
@@ -154,25 +162,24 @@ border: solid 2px grey;
 	position: absolute;
 	left: 90%;
 	top: 0%;
-	height: 18px;
-	width: 18px;
+	height: 13px;
+	width: 15px;
 	cursor: pointer;
 }
 .iconE {
 	position: absolute;
 	left: 86%;
 	top: 0%;
-	height: 18px;
-	width: 18px;
+	height: 13px;
+	width: 15px;
 	cursor: pointer;
 }
 .userName {
-	font-weight: bold;
-	color: yellow;
+	font-weight: 800;
+	color: RGB(44,77,55);
 }
 .friendName {
-	font-weight: bold;
-	color: blue;
-	font-style: italic;
+	font-weight: 800;
+	color: RGB(94,151,66);
 }
 
