--- a/Chat/styles.css
+++ b/Chat/styles.css
@@ -1,10 +1,22 @@
 body {
 	background: RGB(186,218,191);
 }
-.chatty {
+textarea {
+	resize: none;
+	overflow: auto;
+}
+#chatty {
+	position: absolute;
 	top: 3%;
 	left: 5%;
 	width: 20%;
+	float: left;
+}
+#serverIn {
+	position: absolute;
+	top: 7%;
+	left: 80%;
+	color: RGB(44,77,55);
 }
 .chat {
 	position: absolute;
@@ -13,84 +25,36 @@ body {
 	width: 90%;
 	height: 80%;
 }
-.friendInfo {
-	position: absolute;
-	left: 5%;
-	top: 1%;
-	height: 20%;
-	width: 25%;
-	border: solid 2px RGB(115,129,106);
-	overflow: hidden;
-}
-.friendInfo img {
-	position: absolute;
-	left: 63%;
-	top: 4%;
-	width: 35%;
-	height: 90%;
-	overflow: hidden;
-}
-.friendInfo span {
-	position: absolute;
-	left: 13%;
-	width: 40%;
-	top: 10%;
-	height: 100%;
-	text-align: center;
-	color: RGB(55,135,82);
-	font-size: small;
-	font-family: sans-serif;
-	font-style: italic;
-}
 .panel {
 	position: absolute;
 	border: solid 2px RGB(115,129,106);
 	left: 5%;
-	top: 23%;
-	height: 78%;
+	top: 80%;
+	height: 21%;
 	width: 25%;
-	text-align: center;
 	color: RGB(55,135,82);
-	font-size: large;
-	font-family: fantasy;
-	font-weight: bold;
-	float: left;
-}
-.panel select {
-	color: RGB(79,138,97);
-	width: 250px;
-	border-radius: 10%;
-	background-color: #E0E3FA;
-	font-size: small;
-	font-family: fantasy;
-	font-style: italic;
-	-webkit-appearance: none;
-	-moz-appearance: none;
-	position: absolute;
-	left: 3%;
-	top: 10%;
-	width: 96%;
-	height: 30%;
-	overflow: hidden;
-	float: left;
-}
- 
-.panel form {
-	position: absolute;
-	float: left;
-	left: 0%;
-	top: 43%;
-	width: 100%;
-	height: 18%;
 	overflow: hidden;
 }
-.panel img {
+#name {
 	position: absolute;
-	left: 53%;
-	top: 69%;
-	height: 30%;
-	width: 45%;
+	left: 5%;
+	top: 5%;
+	width: 88%;
+	height: 20%;
 }
+#enterName {
+	position: absolute;
+	left: 5%;
+	top: 55%;
+	width: 50%;
+	height: 20%;
+}
+.panel button {
+	position: absolute;
+	left: 65%;
+	top: 45%;
+}
+
 .button {
 	background-color: RGB(123,179,141);
 	-moz-border-radius: 30%;
@@ -122,7 +86,7 @@ body {
 	position: absolute;
 	left: 0%;
 	top: 0%;
-	height: 100%;
+	height: 99%;
 	width: 80%;
 }
 .userArea button {
@@ -133,25 +97,24 @@ body {
 .messageArea {
 	position: absolute;
 	border: solid 2px RGB(115,129,106);
-	left: 31%;
+	left: 5%;
 	top: 1%;
 	height: 77%;
 	background-color: RGB(227, 241, 226);
-	width: 68%;
-	overflow-y: scroll;
-	overflow-x: hidden;
+	width: 94%;
+	overflow-y: auto;
 }
 .friendMessage {
 	position: relative;
 	left: 3%;
 	top: 1%;
-	width: 80%;
+	width: 97%;
 	color: green;
 }
 .userMessage {
 	position: relative;
 	left: 3%;
-	width: 100%;
+	width: 97%;
 	color: green;
 }
 .userMessage div {
@@ -159,17 +122,17 @@ body {
 	left: 0%;
 	width: 80%;
 }
-.iconDelete {
+#iconDelete {
 	position: absolute;
-	left: 90%;
+	left: 96%;
 	top: 0%;
 	height: 13px;
 	width: 15px;
 	cursor: pointer;
 }
-.iconEdit {
+#iconEdit {
 	position: absolute;
-	left: 86%;
+	left: 93%;
 	top: 0%;
 	height: 13px;
 	width: 15px;
